# cinema

./: .gitignore  README.md  pyproject.toml  script.js
.github/workflows/: update-movies.yml
config/: settings.json
data/: movies_2025_12.json  movies_2026_04.json  movies_raw_2025_12.json  movies_raw_2026_04.json
docs/: ARCHITECTURE.md
scripts/: __init__.py  api.py  batch_fetch.py  fetch_movie.py  generate_display_data.py
